Increased flag's z-index to become clickable, i.e., no longer burried under the sidebar.

--- a/less/main.less
+++ b/less/main.less
@@ -18,6 +18,7 @@ body, html {
 	top: 2%;
 	left: 2%;
 	width: 80px;
+	z-index: 1;
 }
 
 .invisible {
